--- a/01_Introduccion/Intro_comandos.Rmd
+++ b/01_Introduccion/Intro_comandos.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Intro"
 author: "David García Callejas"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -104,7 +106,8 @@ log(x, base = 10)
 # raiz cuadrada
 sqrt(x)
 
-# etc. Podemos combinar operaciones siguiendo las reglas matemáticas de precedencia
+# etc. Podemos combinar operaciones siguiendo las reglas 
+# matemáticas de precedencia
 x + y*3
 log(x*y)^2
 
@@ -130,7 +133,8 @@ Estos operadores devuelven el valor "TRUE" o "FALSE" si se cumple, o no, la oper
 Por último, existen operadores lógicos, que nos sirven para unir condiciones. Varios ejemplos:
 
 ```{r}
-# si queremos saber si una variable es mayor que 1 pero, a la vez, menor que 10
+# si queremos saber si una variable es mayor que 1 pero, 
+# a la vez, menor que 10...
 # usamos el operador lógico AND
 (x > 1) & (x < 10)
 
@@ -138,7 +142,8 @@ Por último, existen operadores lógicos, que nos sirven para unir condiciones. 
 # operador OR
 (x < 1) | (x > 10)
 
-# un signo de exclamación al principio de una condición se interpreta como la negación de la misma
+# un signo de exclamación al principio de una condición 
+# se interpreta como la negación de la misma
 # por ejemplo, ¿es x menor que 1?
 (x < 1)
 # y en este caso, literalmente, ¿es x NO menor que 1?
@@ -151,13 +156,15 @@ Hasta ahora, hemos visto cómo R puede trabajar como si fuera una calculadora en
 
 Los tipos básicos de datos que puede contener una variable son cinco: número entero, número real, número complejo, carácter, y valor booleano (o lógico).
 ```{r}
-# nuestra variable es un número entero, que es una variante del modo "numeric"
+# nuestra variable es un número entero, 
+# que es una variante del modo "numeric"
 str(x)
 
 # los números reales son otra variante del modo "numeric"
 str(3.5)
 
-# para crear un número complejo, tenemos que especificar su parte real y su parte imaginaria
+# para crear un número complejo, tenemos que especificar 
+# su parte real y su parte imaginaria
 z <- complex(real = 1, imaginary = 1)
 str(z)
 
@@ -165,8 +172,10 @@ str(z)
 a <- "mi variable"
 str(a)
 
-# los datos booleanos ya los hemos visto más arriba: son tipos especiales que pueden tomar valores "TRUE" o "FALSE"
-# EJERCICIO: crea una condición usando la variable "a" y asígnala a una nueva variable
+# los datos booleanos ya los hemos visto más arriba: 
+# son tipos especiales que pueden tomar valores "TRUE" o "FALSE"
+# EJERCICIO: crea una condición usando la variable "a" 
+# y asígnala a una nueva variable
 ```
 
 # Vectores
@@ -222,7 +231,8 @@ length(vec3)
 
 Una particularidad importante es que R recicla valores. Si llega al final de un vector y necesita más valores para terminar una operación, vuelve al principio.
 ```{r warning=FALSE}
-# los dos vectores son del mismo tamaño, así que la multiplicación es elemento a elemento
+# los dos vectores son del mismo tamaño, 
+# así que la multiplicación es elemento a elemento
 1:5 * 1:5
 # ¿qué pasa si multiplicamos vectores de tamaños diferentes?
 1:5 * 1:6
@@ -239,18 +249,22 @@ vec2[5]
 vec2[5] <- 55
 vec2
 
-# entre los corchetes también pueden ir varios elementos, por ejemplo si quiero poner el primer y el tercer elemento a cero
+# entre los corchetes también pueden ir varios elementos, 
+# por ejemplo si quiero poner el primer y el tercer elemento a cero
 vec2[c(1,3)] <- 1
 # ¿y por qué no esto? 
 # vec2[1,3] <- 1 
-# c(1,3) es un vector, mientras que 1,3 no lo es. Probad a escribir ambos en la consola.
+# c(1,3) es un vector, mientras que 1,3 no lo es. 
+# Probad a escribir ambos en la consola.
 
 
-# si las posiciones que nos interesan están en otro vector, también se puede utilizar
+# si las posiciones que nos interesan están en otro vector, 
+# también se puede utilizar
 posiciones <- c(1,3)
 vec2[posiciones]
 
-# podemos "preguntar" qué elementos de un vector cumplen una cierta condición, usando la función "which"
+# podemos "preguntar" qué elementos de un vector 
+# cumplen una cierta condición, usando la función "which"
 # esta función nos devuelve las posiciones que cumplen la condición
 which(vec2 < 30)
 ```
@@ -301,17 +315,18 @@ Ocurre a menudo que funciones más avanzadas tienen varios argumentos, como el c
 
 En la ayuda podemos leer una descripción de la función, su sintaxis, los argumentos que acepta, el tipo de valor que devuelve, y en muchas ocasiones, ejemplos prácticos de su uso.
 
-```{r}
-# EJERCICIO 1
+## Ejercicios
 
-# a) crea un vector numérico que vaya de 1 a 100 en intervalos de 0.1. 
-# b) usa la función "which" para saber qué elementos del vector que has creado son mayores de 90, y almacena ese resultado.
-# c) crea un nuevo vector que almacene los valores del primer vector que son mayores de 90.
+1
 
-# EJERCICIO 2
+a) crea un vector numérico que vaya de 1 a 100 en intervalos de 0.1.
+b) usa la función "which" para saber qué elementos del vector que has creado son mayores de 90, y almacena ese resultado.
+c) crea un nuevo vector que almacene los valores del primer vector que son mayores de 90.
 
-# a) la función "runif" genera vectores de números aleatorios entre un número mínimo y un máximo. Comprueba la ayuda de R para esta función (verás que hay otras funciones en su misma página de ayuda, mira las secciones "usage" para ver su sintaxis, y "arguments" para ver sus argumentos).
-# b) usa la función runif para almacenar un vector con 50 elementos aleatorios entre 0 y 10.
-# c) obtén la media y la desviación típica de esos elementos.
-# d) crea un nuevo vector que sólo contenga los elementos del primero que sean menores o iguales a 5 (usa la función "which" como en el primer ejercicio).
-```
+2
+
+a) la función "runif" genera vectores de números aleatorios entre un número mínimo y un máximo. Comprueba la ayuda de R para esta función (verás que hay otras funciones en su misma página de ayuda, mira las secciones "usage" para ver su sintaxis, y "arguments" para ver sus argumentos).
+b) usa la función runif para almacenar un vector con 50 elementos aleatorios entre 0 y 10.
+c) obtén la media y la desviación típica de esos elementos.
+d) crea un nuevo vector que sólo contenga los elementos del primero que sean menores o iguales a 5 (usa la función "which" como en el primer ejercicio).
+
