--- a/05_conceptos_avanzados/introduccion_tidyverse.Rmd
+++ b/05_conceptos_avanzados/introduccion_tidyverse.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Introducción al tidyverse"
 author: "David García Callejas"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
