--- a/05_conceptos_avanzados/introduccion_tidyverse.Rmd
+++ b/05_conceptos_avanzados/introduccion_tidyverse.Rmd
@@ -60,7 +60,7 @@ iris2 <- iris %>%
   mutate(columna.nueva = Sepal.Length * Sepal.Width)
 ```
 
-Muchas de estas operaciones (todas, en realidad) tienen formas alternativas en R "base". Al codificarlas en `tidyverse` ganamos flexibilidad y hacemos código más compacto y legible.
+Todas estas operaciones tienen formas alternativas en R "base". Al codificarlas en `tidyverse` ganamos flexibilidad y hacemos código más compacto y legible.
 
 Veamos un ejemplo completo, en el que obtenemos la magnitud y profundidad medias de los terremotos en diferentes paises. Para ello, primero necesitamos asignar a nuestros datos de terremotos el país en el que se registraron. Definimos una función que devuelve el nombre del país a partir en el que se encuentra un punto de latitud y longitud determinadas.
 https://stackoverflow.com/questions/14334970/convert-latitude-and-longitude-coordinates-to-country-name-in-r
@@ -183,9 +183,14 @@ head(tweet_words_2)
 names(tweet_words_2)[2] <- "palabra"
 
 sa <- tweet_words_2 %>% left_join(lexico)
-sa.long <- pivot_longer(sa,cols = c(media_agrado,media_activacion,media_imaginabilidad),names_to = "sentimiento",values_to = "media")
+sa.long <- pivot_longer(sa,cols = c(media_agrado,
+                                    media_activacion,media_imaginabilidad),
+                        names_to = "sentimiento",values_to = "media")
 
-sa.conteo <- sa.long %>% filter(!is.na(media)) %>% group_by(sentimiento) %>% summarise(total=sum(media))
+sa.conteo <- sa.long %>% 
+  filter(!is.na(media)) %>% 
+  group_by(sentimiento) %>% 
+  summarise(total=sum(media))
 
 sa.plot <- ggplot(sa.conteo, aes(x = sentimiento, y = total)) +
   geom_col(aes(stat = "identity")) + 
